--- a/config/config.json
+++ b/config/config.json
@@ -46,8 +46,8 @@
 		}
 	},
 	"MusicApiParameters": {
-		"url": "https://sber-zvuk.com/",
-		"email": "ag881.pst@gmail.com",
-		"password": "rksm911911Hh"
+		"url": "",
+		"email": "",
+		"password": ""
 	}
 }
